--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -3,7 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Gallery</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="container">
+        <nav class="menu">
+          <ul class="menu-list">
+            <li class="menu-item">
+              <a class="menu-link" href="index.html">Go to Home</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="2-form.html">Go to Form</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <section class="section">
+      <div class="container">
+        <p class="title">Welcome to Gallery</p>
+        <ul class="gallery"></ul>
+      </div>
+    </section>
+
+    <script type="module" src="./js/1-gallery.js"></script>
+  </body>
 </html>
