--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -12,10 +12,10 @@
         <nav class="menu">
           <ul class="menu-list">
             <li class="menu-item">
-              <a class="menu-link" href="index.html">Go to Home</a>
+              <a class="menu-link" href="./index.html">Go to Home</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link" href="2-form.html">Go to Form</a>
+              <a class="menu-link" href="./2-form.html">Go to Form</a>
             </li>
           </ul>
         </nav>
