--- a/src/2-form.html
+++ b/src/2-form.html
@@ -12,10 +12,10 @@
         <nav class="menu">
           <ul class="menu-list">
             <li class="menu-item">
-              <a class="menu-link" href="index.html">Go to Home</a>
+              <a class="menu-link" href="./index.html">Go to Home</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link" href="1-gallery.html">Go to Gallery</a>
+              <a class="menu-link" href="./1-gallery.html">Go to Gallery</a>
             </li>
           </ul>
         </nav>
