--- a/src/index.html
+++ b/src/index.html
@@ -25,10 +25,10 @@
         <nav class="menu">
           <ul class="menu-list">
             <li class="menu-item">
-              <a class="menu-link" href="1-gallery.html">Gallery</a>
+              <a class="menu-link" href="./1-gallery.html">Gallery</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link" href="2-form.html">Form</a>
+              <a class="menu-link" href="./2-form.html">Form</a>
             </li>
           </ul>
         </nav>
